--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,19 @@
 	</dependencies>
 
 	<build>
-		<!-- <finalName>${project.artifactId}</finalName> -->
+		<!--  <finalName>${project.artifactId}</finalName> -->
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>maven-android-plugin</artifactId>
 				<extensions>true</extensions>
+				<configuration>
+                    <sdk>
+                        <path>${user.home}/android-sdk/</path>
+                        <platform>1.6</platform>
+                    </sdk>
+                    <deleteConflictingFiles>true</deleteConflictingFiles>
+                </configuration>
 				<executions>
 					<execution>
 						<id>startEmulator</id>
