--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.eclipse.jgit</groupId>
+			<groupId>com.madgag</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.8.3-UNOFFICIAL-HARMONY-6637-FIX</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
