--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,9 @@
 		<activity android:name="Clone" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="com.madgag.git.clone.prepare" />
+				<data android:mimeType="text/*" android:scheme="git" />
+				<data android:mimeType="text/*" android:scheme="http" />
+				<data android:mimeType="text/*" android:scheme="https" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
