--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,15 @@
 		
 		<provider android:name="GitInfoProvider"
 			android:authorities="com.madgag.agit.gitinfoprovider"></provider>
-			
+
+		<activity android:name="RepoLogActivity">
+			<intent-filter>
+				<action android:name="git.log" />
+				<data android:scheme="file" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+		
 		<activity android:name="RepositoryListActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -39,7 +47,5 @@
 	<uses-sdk android:minSdkVersion="7" />
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-
-
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
