--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<scope>provided</scope>
 			<version>2.1_r1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
