--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.madgag.agit" android:versionCode="1" android:versionName="1.0">
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+	<application 
+	android:theme="@style/Theme.App"
+	android:icon="@drawable/icon"
+	 android:label="@string/app_name"
+	  android:debuggable="true">
 		<activity android:name="RepositoryManagementActivity"
 			android:label="@string/app_name">
 			<intent-filter>
