Commit viewer poke around... doesn't actually have UI yet, but debug prints tree diff
Looks like you need to actually get your RevObjects parsed to be populated!

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,11 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity android:name="RevCommitChangeViewer">
+			<intent-filter>
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
 	</application>
 	<uses-sdk android:minSdkVersion="7" />
 
