--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,22 @@
 			<artifactId>google-collections</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>util-intervals</artifactId>
+			<version>1.21</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>util-diff</artifactId>
+			<version>1.22-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -48,12 +64,12 @@
 				<artifactId>maven-android-plugin</artifactId>
 				<extensions>true</extensions>
 				<configuration>
-                    <sdk>
-                        <path>${user.home}/android-sdk/</path>
-                        <platform>7</platform>
-                    </sdk>
-                    <deleteConflictingFiles>true</deleteConflictingFiles>
-                </configuration>
+					<sdk>
+						<path>${user.home}/android-sdk/</path>
+						<platform>7</platform>
+					</sdk>
+					<deleteConflictingFiles>true</deleteConflictingFiles>
+				</configuration>
 				<executions>
 					<execution>
 						<id>startEmulator</id>
