A lot of changes - mainly using AsyncTask, and trying to get the Clone and Fetch tasks to do good notifications

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,9 @@
 			<intent-filter>
 				<action android:name="git.FETCH" />
 			</intent-filter>
+			<intent-filter>
+				<action android:name="git.CLONE" />
+			</intent-filter>
 		</service>
 		
 		<provider android:name="GitInfoProvider"
