First steps towards making Agit use an SSH agent
Doesn't quite work yet though, because the terminal manager has not quite yet bound when I want to get some identities out

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,4 +57,6 @@
 
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="com.madgag.android.ssh.permission.ACCESS_SSH_AGENT"></uses-permission>
+	
 </manifest> 
