--- a/pom.xml
+++ b/pom.xml
@@ -4,97 +4,37 @@
 	<modelVersion>4.0.0</modelVersion>
 	<version>1.0-SNAPSHOT</version>
 	<groupId>com.madgag</groupId>
-	<artifactId>agit</artifactId>
-	<packaging>apk</packaging>
-	<name>agit - git client for Android</name>
+	<artifactId>agit-parent</artifactId>
+	<packaging>pom</packaging>
+	<name>Agit parent POM project</name>
+	<modules>
+	<module>agit</module>
+	<module>agit-tests</module>
+	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<android.version>2.1_r1</android.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>ssh-android</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>org.eclipse.jgit</artifactId>
-			<version>0.8.4.2-UNOFFICIAL-BUILD-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-			<version>4.8.1</version>
-		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
 			<artifactId>android</artifactId>
 			<scope>provided</scope>
-			<version>2.1_r1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.collections</groupId>
-			<artifactId>google-collections</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>util-intervals</artifactId>
-			<version>1.21</version>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>util-diff</artifactId>
-			<version>1.22-SNAPSHOT</version>
+			<version>${android.version}</version>
 		</dependency>
 	</dependencies>
-
+	    <dependencyManagement>
+		<dependencies>
+		    <dependency>
+		        <groupId>com.google.android</groupId>
+		        <artifactId>android-test</artifactId>
+		        <version>${android.version}</version>
+		    </dependency>
+		</dependencies>
+	    </dependencyManagement>
 	<build>
 		<!--  <finalName>${project.artifactId}</finalName> -->
 		<plugins>
-			<plugin>
-				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
-				<artifactId>maven-android-plugin</artifactId>
-				<extensions>true</extensions>
-				<configuration>
-					<sdk>
-						<path>${user.home}/android-sdk/</path>
-						<platform>7</platform>
-					</sdk>
-					<deleteConflictingFiles>true</deleteConflictingFiles>
-					<!-- <generateApk>false</generateApk> -->
-				</configuration>
-				<executions>
-				<!--  
-					<execution>
-						<id>startEmulator</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>emulator-start</goal>
-						</goals>
-					</execution>
-					-->
-					<execution>
-						<id>alignApk</id>
-						<phase>install</phase>
-						<goals>
-							<goal>zipalign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3</version>
