--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
                     <!--<version>2.4.1</version>-->
                     <configuration>
                         <sdk>
+							<path>${user.home}/android-sdk/</path> 
                             <platform>8</platform>
                         </sdk>
                         <emulator>
