--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>ssh-android</artifactId>
-			<version>1.1-SNAPSHOT</version>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
