--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>calculon</artifactId>
-			<version>1.0.5-UNOFFICIAL-BUILD-SNAPSHOT</version>
+			<version>1.0.5-UNOFFICIAL-BUILD</version>
 		</dependency>
 		<dependency>
 		    <groupId>com.google.android</groupId>
