--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -14,6 +14,8 @@
 			</intent-filter>
 		</activity>
 
+		<activity android:name="DiffPlayerActivity" android:label="@string/app_name" />
+
 		<activity android:name="CloneLauncherActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="com.madgag.git.clone.prepare" />
@@ -55,6 +57,7 @@
 	</application>
 	<uses-sdk android:minSdkVersion="7" />
 
+ 	<uses-permission android:name="android.permission.VIBRATE"/>  
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="com.madgag.android.ssh.permission.ACCESS_SSH_AGENT"></uses-permission>
