I'm really not sure why git is failing to init on the test repo
W/System.err(27155): 	at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:626)
W/System.err(27155): 	at dalvik.system.NativeStart.main(Native Method)
W/System.err(27155): Caused by: org.eclipse.jgit.errors.MissingObjectException: Missing commit 9e0b5e42b3e1c59bc83b55142a8c50dfae36b144
W/System.err(27155): 	at org.eclipse.jgit.storage.file.WindowCursor.open(WindowCursor.java:112)
W/System.err(27155): 	at org.eclipse.jgit.revwalk.RevWalk.getCachedBytes(RevWalk.java:864)
W/System.err(27155): 	at org.eclipse.jgit.revwalk.RevCommit.parseHeaders(RevCommit.java:136)
W/System.err(27155): 	at org.eclipse.jgit.revwalk.RevWalk.markStart(RevWalk.java:291)
W/System.err(27155): 	at org.eclipse.jgit.api.LogCommand.add(LogCommand.java:209)
W/System.err(27155): 	at org.eclipse.jgit.api.LogCommand.add(LogCommand.java:142)
W/System.err(27155): 	at org.eclipse.jgit.api.LogCommand.call(LogCommand.java:103)
W/System.err(27155): 	... 14 more

--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -17,6 +17,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
+			<artifactId>util-compress</artifactId>
+			<version>1.24</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
 			<artifactId>agit</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>apk</type>
@@ -34,9 +39,9 @@
 			<version>1.0.5-UNOFFICIAL-BUILD</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.google.android</groupId>
-		    <artifactId>android-test</artifactId>
-		    <scope>provided</scope>
+			<groupId>com.google.android</groupId>
+			<artifactId>android-test</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -44,12 +49,12 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                <artifactId>maven-android-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+				<artifactId>maven-android-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
