Fixing the intent which takes you to the Repo Management Activity

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -10,6 +10,7 @@
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="git.repo.MANAGE" />
+				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
