--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,10 @@
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
                     <!-- change to explicit version for standalone project or remove if version inherited from company pom -->
-                    <!--<version>2.4.1</version>-->
+                    <version>2.8.2</version>
                     <configuration>
                         <sdk>
-							<path>${user.home}/android-sdk/</path> 
+		             <path>${user.home}/android-sdk/</path> 
                             <platform>8</platform>
                         </sdk>
                         <emulator>
