Updated to use a jgit build with change I1d9b3a8b - Use stack-based recursion for delta resolution

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>0.9.9.3-UNOFFICIAL-ROBERTO-RELEASE-SNAPSHOT</version>
+			<version>0.10.99.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
