--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>org.eclipse.jgit</artifactId>
-			<version>0.10.99.0</version>
+			<version>0.10.99.3-UNOFFICIAL-ROBERTO-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
