--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -17,6 +17,26 @@
 				<data android:scheme="file" />
 			</intent-filter>
 		</activity>
+		
+		<activity android:name="RDTypeListActivity">
+			<intent-filter>
+				<action android:name="git.remote.LIST" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="git.tag.LIST" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="git.branch.LIST" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+		
+		
+		
+		
+		
 
 		<activity android:name="DiffPlayerActivity" android:label="@string/app_name" />
 
