Standardising the intent names to match the .LIST intents
tweak for dont-need-to-call-super on onCreateOptionsMenu

also small annoying fix for NPE in TagViewer contnetchanged method... something is probably a

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -68,14 +68,14 @@
 		
 		<activity android:name="BranchViewer">
 			<intent-filter>
-				<action android:name="git.view.BRANCH" />
+				<action android:name="git.branch.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 		
 		<activity android:name="TagViewer">
 			<intent-filter>
-				<action android:name="git.view.TAG" />
+				<action android:name="git.tag.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
