--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.madgag.agit" android:versionCode="1" android:versionName="1.0">
-	<application 
-	android:theme="@style/Theme.App"
-	android:icon="@drawable/icon"
-	 android:label="@string/app_name"
-	  android:debuggable="true">
+	<application android:theme="@style/Theme.App" android:icon="@drawable/icon"
+		android:label="@string/app_name" android:debuggable="true">
 		<activity android:name="RepositoryManagementActivity"
 			android:label="@string/app_name">
 			<intent-filter>
@@ -17,7 +14,7 @@
 				<data android:scheme="file" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity android:name="RDTypeListActivity">
 			<intent-filter>
 				<action android:name="git.remote.LIST" />
