--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -29,11 +29,11 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		
-		
-		
-		
-		
+
+
+
+
+
 
 		<activity android:name="DiffPlayerActivity" android:label="@string/app_name" />
 
@@ -41,6 +41,12 @@
 			<intent-filter>
 				<action android:name="com.madgag.git.clone.prepare" />
 				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW"></action>
+				<category android:name="android.intent.category.DEFAULT"></category>
+				<category android:name="android.intent.category.BROWSABLE"></category>
+				<data android:host="github.com" android:scheme="https" android:pathPattern="/.*/.*"></data>
 			</intent-filter>
 		</activity>
 
@@ -52,9 +58,8 @@
 				<action android:name="git.CLONE" />
 			</intent-filter>
 		</service>
-		
-		<provider android:name="GitInfoProvider"
-			android:authorities="com.madgag.agit.gitinfoprovider"></provider>
+
+		<provider android:name="GitInfoProvider" android:authorities="com.madgag.agit.gitinfoprovider"></provider>
 
 		<activity android:name="RepoLogActivity">
 			<intent-filter>
@@ -62,28 +67,28 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity android:name="BranchViewer">
 			<intent-filter>
 				<action android:name="git.branch.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity android:name="TagViewer">
 			<intent-filter>
 				<action android:name="git.tag.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity android:name="RepositoryListActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="RevCommitViewer">
+		<activity android:name="CommitViewer">
 			<intent-filter>
 				<action android:name="git.view.COMMIT" />
 				<category android:name="android.intent.category.DEFAULT" />
@@ -92,9 +97,9 @@
 	</application>
 	<uses-sdk android:minSdkVersion="7" />
 
- 	<uses-permission android:name="android.permission.VIBRATE"/>  
+	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="com.madgag.android.ssh.permission.ACCESS_SSH_AGENT"></uses-permission>
-	
+
 </manifest> 
