Got Gravatar icons working
Unknown gravatars have to be downloaded, which is done outside of the UI thread to keep the UI responsive

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -35,13 +35,8 @@
 			<artifactId>google-collections</artifactId>
 			<version>1.0</version>
 		</dependency>
-<!--
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>util-intervals</artifactId>
-			<version>1.21</version>
-		</dependency>
--->
+		<!-- <dependency> <groupId>com.madgag</groupId> <artifactId>util-intervals</artifactId> 
+			<version>1.21</version> </dependency> -->
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>util-diff</artifactId>
@@ -49,12 +44,12 @@
 		</dependency>
 
 	</dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
-                <artifactId>maven-android-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+				<artifactId>maven-android-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
