First cut at animating the commit nav...
note that buttons don't actually do anything yet...

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -81,7 +81,8 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name="CommitViewer">
+		
+		<activity android:name="CommitViewerActivity">
 			<intent-filter>
 				<action android:name="git.view.COMMIT" />
 				<category android:name="android.intent.category.DEFAULT" />
