--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -17,6 +17,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
+			<artifactId>lazy-drawables</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
 			<artifactId>ssh-android</artifactId>
 			<version>1.2</version>
 		</dependency>
