--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.madgag.agit" android:versionCode="1" android:versionName="1.0">
-	<application android:theme="@style/Theme.App" android:icon="@drawable/icon"
-		android:label="@string/app_name" android:debuggable="true">
+	<application
+		android:name="com.madgag.agit.AgitApplication"
+		android:theme="@style/Theme.App"
+		android:icon="@drawable/icon"
+		android:label="@string/app_name"
+		android:debuggable="true">
+
 		<activity android:name="RepositoryManagementActivity"
 			android:label="@string/app_name">
 			<intent-filter>
@@ -39,7 +44,8 @@
 				<action android:name="android.intent.action.VIEW"></action>
 				<category android:name="android.intent.category.DEFAULT"></category>
 				<category android:name="android.intent.category.BROWSABLE"></category>
-				<data android:host="github.com" android:scheme="https" android:pathPattern="/.*/.*"></data>
+				<data android:host="github.com" android:scheme="https"
+					android:pathPattern="/.*/.*"></data>
 			</intent-filter>
 		</activity>
 
@@ -81,7 +87,7 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		
+
 		<activity android:name="CommitViewerActivity">
 			<intent-filter>
 				<action android:name="git.view.COMMIT" />
