--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.madgag.agit" android:versionCode="1" android:versionName="1.0">
+	package="com.madgag.agit"
+	android:installLocation="preferExternal"
+	android:versionCode="1"
+	android:versionName="1.0">
 	<application
 		android:name="com.madgag.agit.AgitApplication"
 		android:theme="@style/Theme.App"
