--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -63,6 +63,41 @@
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>maven-android-plugin</artifactId>
 			</plugin>
+						
+      <plugin>
+        <groupId>com.pyx4me</groupId>
+        <artifactId>proguard-maven-plugin</artifactId>
+        <version>2.0.4</version>
+        <executions>
+          <execution>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>proguard</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <injar>android-classes</injar>
+          <libs>
+            <lib>${java.home}/lib/rt.jar</lib>
+          </libs>
+          <obfuscate>false</obfuscate>
+          <options>
+            <option> -keep public class * extends android.app.Activity</option>
+            <option>-keep public class * extends android.app.Application</option>
+            <option>-keep public class * extends android.app.Service</option>
+            <option>-keep public class * extends
+              android.content.BroadcastReceiver</option>
+            <option>-keep public class * extends
+              android.content.ContentProvider</option>
+            <option>-dontskipnonpubliclibraryclasses</option>
+            <option>-dontoptimize</option>
+            <option>-printmapping map.txt</option>
+            <option>-printseeds seed.txt</option>
+            <option>-ignorewarnings</option>
+          </options>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 </project>
