--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 		    <groupId>org.hamcrest</groupId>
 		    <artifactId>hamcrest-core</artifactId>
-		    <version>1.2.1</version>
+		    <version>1.3.RC2</version>
 		</dependency>
 	</dependencies>
 	<build>
