--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -44,9 +44,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.hamcrest</groupId>
-		    <artifactId>hamcrest-core</artifactId>
-		    <version>1.3.RC2</version>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3.RC2</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -56,9 +56,35 @@
 				<artifactId>maven-android-plugin</artifactId>
 			</plugin>
 
-			
-			
-			
+
+
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>start-container</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop-container</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<wait>false</wait>
+					<container>
+						<containerId>jetty6x</containerId>
+						<type>embedded</type>
+					</container>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
