--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -18,6 +18,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>util-compress</artifactId>
+			<version>1.27</version>
 			<version>1.26</version>
 		</dependency>
 		<dependency>
