Finally got my ToySsh agent successfully signing challenges

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
 	<packaging>pom</packaging>
 	<name>Agit parent POM project</name>
 	<modules>
-	<module>agit</module>
-	<module>agit-tests</module>
+		<module>agit</module>
+		<module>agit-tests</module>
+		<module>toy-ssh-agent</module>
 	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
