--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -45,7 +45,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
+			<artifactId>hamcrest-library</artifactId>
 			<version>1.3.RC2</version>
 		</dependency>
 		<dependency>
