--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
                     <!-- change to explicit version for standalone project or remove if version inherited from company pom -->
-                    <version>2.8.4</version>
+                    <version>2.9.0-beta-1</version>
                     <configuration>
                         <sdk>
 		             <path>${user.home}/android-sdk/</path> 
@@ -51,6 +51,7 @@
                         </emulator>
                         <deleteConflictingFiles>true</deleteConflictingFiles>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
+			<extractDuplicates>true</extractDuplicates>
                     </configuration>
                     <extensions>true</extensions>
                 </plugin>
