--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -22,6 +22,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
+			<artifactId>toy-ssh-agent</artifactId>
+			<version>1.1</version>
+			<type>apk</type>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
 			<artifactId>agit</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>apk</type>
@@ -50,9 +56,9 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.gerrit</groupId>
-		    <artifactId>gerrit-war</artifactId>
-		    <version>2.1-SNAPSHOT</version>
-		    <type>war</type>
+			<artifactId>gerrit-war</artifactId>
+			<version>2.1-SNAPSHOT</version>
+			<type>war</type>
 		</dependency>
 	</dependencies>
 	<build>
@@ -86,6 +92,9 @@
 					<container>
 						<containerId>jetty7x</containerId>
 						<type>embedded</type>
+						<systemProperties>
+							<gerrit.site_path>${basedir}/mini-git-server</gerrit.site_path>
+						</systemProperties>
 					</container>
 					<configuration>
 						<properties>
@@ -94,11 +103,11 @@
 						<deployables>
 							<deployable>
 								<groupId>com.google.gerrit</groupId>
-							    <artifactId>gerrit-war</artifactId>
-							    <type>war</type>
+								<artifactId>gerrit-war</artifactId>
+								<type>war</type>
 							</deployable>
 						</deployables>
-					</configuration>					
+					</configuration>
 				</configuration>
 			</plugin>
 		</plugins>
