--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>lazy-drawables</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
