--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -55,7 +55,7 @@
 			<version>1.3.RC2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.gerrit</groupId>
+			<groupId>com.madgag</groupId>
 			<artifactId>gerrit-war</artifactId>
 			<version>2.1-SNAPSHOT</version>
 			<type>war</type>
@@ -102,7 +102,7 @@
 						</properties>
 						<deployables>
 							<deployable>
-								<groupId>com.google.gerrit</groupId>
+								<groupId>com.madgag</groupId>
 								<artifactId>gerrit-war</artifactId>
 								<type>war</type>
 							</deployable>
