--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,31 @@
 	</dependencies>
 	    <dependencyManagement>
 		<dependencies>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+			<version>0.10.99.7-UNOFFICIAL-ROBERTO-RELEASE</version>
+		</dependency>
 		    <dependency>
 		        <groupId>com.google.android</groupId>
 		        <artifactId>android-test</artifactId>
 		        <version>${android.version}</version>
 		    </dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>util-compress</artifactId>
+			<version>1.27</version>
+		</dependency>
 		</dependencies>
 	    </dependencyManagement>
     <build>
