I don't seem to specify a target android platform...

--- a/agit-tests/AndroidManifest.xml
+++ b/agit-tests/AndroidManifest.xml
@@ -18,5 +18,5 @@
     <instrumentation android:name="android.test.InstrumentationTestRunner"
                      android:targetPackage="com.madgag.agit"
                      android:label="Tests for Agit"/>
-
+    <uses-sdk android:minSdkVersion="7" />
 </manifest>
