--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -54,8 +54,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
-			<artifactId>gerrit-war</artifactId>
-			<version>2.1-SNAPSHOT</version>
+			<artifactId>mini-git-server-war</artifactId>
+			<version>0.1</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
@@ -106,7 +106,7 @@
 						<deployables>
 							<deployable>
 								<groupId>com.madgag</groupId>
-								<artifactId>gerrit-war</artifactId>
+								<artifactId>mini-git-server-war</artifactId>
 								<type>war</type>
 							</deployable>
 						</deployables>
