--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,12 @@
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>maven-android-plugin</artifactId>
                     <!-- change to explicit version for standalone project or remove if version inherited from company pom -->
-                    <version>2.9.0-beta-2</version>
+                    <version>2.9.0-beta-1</version>
+
                     <configuration>
+			<jvmArguments>
+			    <jvmArgument>-Xmx1024m</jvmArgument>
+			</jvmArguments>
                         <sdk>
 		             <path>${user.home}/android-sdk/</path> 
                             <platform>8</platform>
