--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -64,6 +64,11 @@
 			<version>2.0-no_aop</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-assisted-inject</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>util-diff</artifactId>
 			<version>1.27</version>
