--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>mini-git-server-war</artifactId>
-			<version>0.2</version>
+			<version>0.3-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
@@ -65,6 +65,28 @@
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>maven-android-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<id>copy-git-server-resources</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/target/mini-git-server</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/mini-git-server</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 
 			<plugin>
 				<groupId>org.codehaus.cargo</groupId>
@@ -91,7 +113,7 @@
 						<containerId>jetty7x</containerId>
 						<type>embedded</type>
 						<systemProperties>
-							<gerrit.site_path>${basedir}/mini-git-server</gerrit.site_path>
+							<gerrit.site_path>${basedir}/target/mini-git-server</gerrit.site_path>
 						</systemProperties>
 					</container>
 					<configuration>
