--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>mini-git-server-war</artifactId>
-			<version>0.3-SNAPSHOT</version>
+			<version>0.3</version>
 			<type>war</type>
 		</dependency>
 	</dependencies>
