--- a/agit-tests/AndroidManifest.xml
+++ b/agit-tests/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.madgag.agit.tests">
+	package="com.madgag.agit.tests"
+	android:installLocation="preferExternal"
+	android:versionCode="1"
+	android:versionName="1.0">
 
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
