--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -52,6 +52,11 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
 		</dependency>
+        <dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>madgag-hamcrest-matchers</artifactId>
+            <version>0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>mini-git-server-war</artifactId>
