--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>madgag-hamcrest-matchers</artifactId>
-            <version>0.1-SNAPSHOT</version>
+            <version>0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
