--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -77,10 +77,17 @@
 			</intent-filter>
 		</activity>
 
+        <activity android:name="DashboardActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 		<activity android:name="RepositoryListActivity">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="git.repo.LIST" />
+				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
 
