--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -38,17 +38,28 @@
 			</intent-filter>
 		</activity>
 
-		<activity android:name="CloneLauncherActivity" android:label="@string/app_name">
+		<activity android:name="CloneLauncherActivity">
 			<intent-filter>
 				<action android:name="com.madgag.git.clone.prepare" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
+		</activity>
+
+        <activity android:name=".weblaunchers.GitHubWebLaunchActivity" android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.VIEW"></action>
-				<category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE"></category>
-				<data android:host="github.com" android:scheme="https"
-					android:pathPattern="/.*/.*"></data>
+                <action android:name="android.intent.action.VIEW"></action>
+				<data android:host="github.com" android:scheme="https" android:pathPattern="/.*/.*" />
+			</intent-filter>
+		</activity>
+
+        <activity android:name=".weblaunchers.GitoriousWebLaunchActivity" android:label="@string/app_name">
+			<intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE"></category>
+                <action android:name="android.intent.action.VIEW"></action>
+				<data android:host="gitorious.org" android:scheme="http" android:pathPattern="/.*/.*" />
 			</intent-filter>
 		</activity>
 
