--- a/agit-tests/AndroidManifest.xml
+++ b/agit-tests/AndroidManifest.xml
@@ -21,5 +21,5 @@
     <instrumentation android:name="android.test.InstrumentationTestRunner"
                      android:targetPackage="com.madgag.agit"
                      android:label="Tests for Agit"/>
-    <uses-sdk android:minSdkVersion="7" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="9"/>
 </manifest>
