--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -17,16 +17,6 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
-			<artifactId>util-compress</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>toy-ssh-agent</artifactId>
-			<version>1.2</version>
-			<type>apk</type>
-		</dependency>
-		<dependency>
-			<groupId>com.madgag</groupId>
 			<artifactId>agit</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<type>apk</type>
@@ -38,6 +28,17 @@
 			<scope>compile</scope>
 			<type>jar</type>
 		</dependency>
+        <dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>agit-test-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.madgag</groupId>
+			<artifactId>toy-ssh-agent</artifactId>
+			<version>1.2</version>
+			<type>apk</type>
+		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>calculon</artifactId>
@@ -47,15 +48,6 @@
 			<groupId>com.google.android</groupId>
 			<artifactId>android-test</artifactId>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-		</dependency>
-        <dependency>
-			<groupId>com.madgag</groupId>
-			<artifactId>madgag-hamcrest-matchers</artifactId>
-            <version>0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
