--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -17,6 +17,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.madgag</groupId>
+			<artifactId>android-viewholder-listviews</artifactId>
+			<version>0.2</version>
+		</dependency>
+        <dependency>
+			<groupId>com.madgag</groupId>
 			<artifactId>lazy-drawables</artifactId>
 			<version>0.8</version>
 		</dependency>
@@ -39,14 +44,15 @@
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
-			<artifactId>util-compress</artifactId>
+			<artifactId>agit-test-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3.RC2</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
