--- a/agit-tests/pom.xml
+++ b/agit-tests/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>agit-test-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
 			<artifactId>toy-ssh-agent</artifactId>
@@ -61,6 +65,9 @@
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>maven-android-plugin</artifactId>
+                <configuration>
+                        <extractDuplicates>true</extractDuplicates>
+                </configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
