--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-library</artifactId>
-            <version>1.3.RC2</version>
+            <scope>test</scope>
         </dependency>
 		<dependency>
 			<groupId>junit</groupId>
