Add support for DSA keys as well as RSA in git+ssh connections

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -85,7 +85,16 @@
 			<artifactId>util-diff</artifactId>
 			<version>1.27</version>
 		</dependency>
-
+        <dependency>
+            <groupId>net.schmizz</groupId>
+            <artifactId>sshj</artifactId>
+            <version>0.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.6.1</version>
+        </dependency>
 
 	</dependencies>
 	<build>
