Use common Proguard configuration across App AND Integration Tests
This ensures the tests fail realistically,
rather than providing missing classes...

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,69 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                 </plugin>
+                <plugin>
+                    <groupId>com.pyx4me</groupId>
+                    <artifactId>proguard-maven-plugin</artifactId>
+                    <version>2.0.4</version>
+                    <executions>
+                        <execution>
+                            <phase>process-classes</phase>
+                            <goals>
+                                <goal>proguard</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <proguardVersion>4.4</proguardVersion>
+                        <injar>android-classes</injar>
+                        <libs>
+                            <lib>${java.home}/lib/rt.jar</lib>
+                        </libs>
+                        <obfuscate>false</obfuscate>
+                        <options>
+                            <option>-keepclassmembers
+                                enum * { public static **[] values(); public static ** valueOf(java.lang.String);
+                                }
+                            </option>
+
+                            <option>-keep class com.madgag.agit.**</option>
+
+                            <option>-keep public class * extends android.app.Activity</option>
+                            <option>-keep public class * extends android.app.Application</option>
+                            <option>-keep public class * extends android.app.Service</option>
+                            <option>-keep public class * extends android.content.BroadcastReceiver</option>
+                            <option>-keep public class * extends android.content.ContentProvider</option>
+                            <option>-keep
+                                public class * extends android.view.View { public &lt;init&gt;(android.content.Context);
+                                public &lt;init&gt;(android.content.Context, android.util.AttributeSet);
+                                public &lt;init&gt;(android.content.Context, android.util.AttributeSet, int);
+                                public void set*(...); }
+                            </option>
+                            <option>-keep public class roboguice.**</option>
+                            <option>-keep class com.google.inject.Binder</option>
+                            <option>-keepclassmembers class * { @com.google.inject.Inject &lt;init&gt;(...); }</option>
+                            <option>-keep class com.jcraft.jsch.jce.*</option>
+                            <!-- <option>-keep class com.jcraft.jsch.DHG1</option> -->
+                            <option>-dontskipnonpubliclibraryclasses</option>
+                            <option>-dontoptimize</option>
+                            <option>-printmapping map.txt</option>
+                            <option>-printseeds seed.txt</option>
+                            <option>-ignorewarnings</option>
+
+                            <option>-keepattributes *Annotation*</option>
+                            <option>-keepclassmembers class com.google.inject.assistedinject.FactoryProvider2 { *; }</option>
+                            
+                            <option>-keep public class * extends junit.framework.TestCase</option>
+                            <option>-keepclassmembers class * {
+                                @com.google.inject.Provides *;
+                                @android.test.suitebuilder.annotation.* *;
+                                void test*(...);
+                                }</option>
+                            <option>-keepclassmembers class * extends roboguice.application.RoboApplication { *; }</option>
+                           
+                        </options>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
