Add 'About' screen with partial list of dependencies to thank...

--- a/agit/AndroidManifest.xml
+++ b/agit/AndroidManifest.xml
@@ -102,6 +102,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="AboutActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
 		<activity android:name="RepositoryListActivity">
 			<intent-filter>
 				<action android:name="git.repo.LIST" />
