Use Guava instead of the 'ancient and unmaintained' Google Collections
http://code.google.com/p/google-collections/ says:

What you see here is ancient and unmaintained. Do not use it.

Guava is a fully compatible superset of the old Google Collections Library. It also includes years worth of bug fixes, doc fixes, and performance fixes, so we strongly encourage you to use Guava instead of Google Collections.

--- a/agit/pom.xml
+++ b/agit/pom.xml
@@ -39,8 +39,8 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.collections</groupId>
-			<artifactId>google-collections</artifactId>
+			<groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.madgag</groupId>
