--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
                 <version>2.0</version>
             </dependency>
             <dependency>
-                <groupId>com.google.collections</groupId>
-                <artifactId>google-collections</artifactId>
-                <version>1.0</version>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>r09</version>
             </dependency>
             <dependency>
                 <groupId>com.madgag</groupId>
